// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testExecutions file tag 1`] = `
"<testExecutions version=\\"1\\">
    <file path=\\"test/FooTest.js\\">
    </file>
    <file path=\\"test/BarTest.js\\">
    </file>
</testExecutions>"
`;

exports[`testExecutions full report 1`] = `
"<testExecutions version=\\"1\\">
    <file path=\\"test/FooTest.js\\">
        <testCase name=\\"lorem ipsum\\" duration=\\"5\\"/>
    </file>
    <file path=\\"test/BarTest.js\\">
        <testCase name=\\"lorem ipsum\\" duration=\\"5\\">
            <failure message=\\"Lorem ipsum\\"><![CDATA[Lorem ipsum]]></failure>
        </testCase>
    </file>
</testExecutions>"
`;

exports[`testExecutions root: <testExecutions version="1"> 1`] = `"<testExecutions version=\\"1\\"></testExecutions>"`;
